Home Work 19 - Allure report improvement attachment